gmaps in place-list fixed, now loads fine

--- a/www/home/style.css
+++ b/www/home/style.css
@@ -47,7 +47,11 @@ div{
 }
 
 .place-card{
-    height:305px;
+    height:400px;
+}
+
+.place-map{
+    height:200px;
 }
 .capitalize {
     text-transform: capitalize;
