--- a/www/home/style.css
+++ b/www/home/style.css
@@ -71,7 +71,9 @@ div{
     cursor: pointer;
 }
 
-
+.md-button.md-fab.md-fab-bottom-right {
+    position: fixed;
+}
 md-content{
     background-color:transparent;
 }
