--- a/www/home/views/mySuggestions.html
+++ b/www/home/views/mySuggestions.html
@@ -1,6 +1,6 @@
 <md-content layout-margin>
     <div layout="row" layout-wrap layout-align="center">
-            <div flex="40" flex-xs="100">
+            <!--<div flex="40" flex-xs="100">
                 <form name="newPlaceForm" ng-submit="vm.createItem(newPlaceForm)">
                     <md-card >
                         <div layout="column" layout-margin>
@@ -13,7 +13,6 @@
                             </md-input-container>
                             <md-input-container>
                                 <label>Address</label>
-                                <!--<input ng-model="vm.newItem.address" name="address" required>-->
                                 <input places-auto-complete size=80
                                         placeholder=""
                                         value=""
@@ -53,7 +52,7 @@
                         <marker position="{{vm.marker}}" title="{{vm.marker}}"></marker>
                 </ng-map>
             </md-card>    
-        </div>
+        </div>-->
         <div flex="80" flex-xs="100">
             <md-card>
                 <md-toolbar class="md-table-toolbar">
@@ -81,7 +80,7 @@
                             <td md-cell >{{s.place.type}}</td>
                             <td md-cell >{{s.place.address}}</td>
                             <td md-cell>
-                                <md-button class="md-icon-button" aria-label="Delete" ng-click="vm.deleteItem(s._id)">
+                                <md-button class="md-icon-button" aria-label="Delete" ng-click="vm.showDeleteDialog($event, s._id)">
                                     <md-icon md-font-icon="fa-times" class="fa fa-ng"></md-icon>
                                 </md-button>
                             </td>
@@ -94,5 +93,7 @@
     </div>
     
 </md-content>
-
+<md-button class="md-fab md-fab-bottom-right md-primary" aria-label="Add_Review" ng-click="vm.showCreateDialog($event)">
+    <md-icon md-font-icon="fa-plus" class="fa fa-ng"></md-icon>
+</md-button>
             
