--- a/www/home/views/placeItem.html
+++ b/www/home/views/placeItem.html
@@ -113,6 +113,6 @@
         </div>
     </div>
 </md-content>
-<md-button class="md-fab md-fab-bottom-right md-primary" aria-label="Add_Review" ng-click="vm.showCreateDialog($event)">
+<md-button ng-if="vm.user_id" class="md-fab md-fab-bottom-right md-primary" aria-label="Add_Review" ng-click="vm.showCreateDialog($event)">
     <md-icon md-font-icon="fa-plus" class="fa fa-ng"></md-icon>
 </md-button>
