passport added to endpoints, geocoder fixed

--- a/www/admin/views/dialogs/newPlaceDialog.html
+++ b/www/admin/views/dialogs/newPlaceDialog.html
@@ -26,7 +26,7 @@
                     </div>
                 </md-input-container>
                 <md-input-container>
-                    <label>State</label>
+                    <label>Type</label>
                     <md-select ng-model="vm.newItem.type">
                         <md-option disabled><em>None</em></md-option>
                         <md-option ng-repeat="type in vm.types" ng-value="type">
