--- a/www/admin/views/places.html
+++ b/www/admin/views/places.html
@@ -1,4 +1,4 @@
-<md-content layout-margin>
+<md-content layout-padding>
     <div layout="row" layout-align="center">
         <div flex="90" flex-xs="100">
             <md-card>
